# FlexFlow

./: .env.default  .gitignore  CMakeLists.txt  ReadMe.md  Taskfile.yml  angular.json  buf.gen.yaml  cppclimain.cpp  ffmodel_unittest_main.cpp  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  testffmodelmain.cpp  tsconfig.app.json  tsconfig.json
cmake/: ffmodel.cmake  ffmodel_unittest.cmake  flexflowcppcli.cmake  testffmodel.cmake
model/: errmsg.cpp  errmsg.hpp  utils.cpp  utils.hpp
protos/: access.proto  buf.yaml  queue.proto  (+1 more)
src-cpp/: CMakeLists.txt  LICENSE  config.h.in  ffmodel_unittest_main.cpp  ffmodel_ut_main.cpp  guimain.cpp  guimain.qrc  server-config.example.yaml  servermain.cpp
src-cpp/cmake/: ffmodel.cmake  ffmodel_unittest.cmake  ffmodel_ut.cmake  flexflowgui.cmake  flexflowserver.cmake  getGitInfo.cmake  protoc.cmake
src-cpp/controller/global/: defines.h  global.cpp  global.hpp
src-cpp/controller/grpcserver/: accessimpl.cpp  accessimpl.hpp  authinterceptor.cpp  authinterceptor.hpp  config.cpp  config.hpp  init.cpp  init.hpp  queueimpl.cpp  queueimpl.hpp  queuelistimpl.cpp  queuelistimpl.hpp  server.cpp  server.hpp  utils.cpp  utils.hpp
src-cpp/controller/gui/: about.cpp  about.hpp  config.cpp  config.hpp  global.cpp  global.hpp  mainwindow.cpp  mainwindow.hpp  settings.cpp  settings.hpp  settingsthread.cpp  settingsthread.hpp
src-cpp/model/: defines.h  errmsg.cpp  errmsg.hpp  utils.cpp  utils.hpp
src-cpp/model/auth/: crypto.cpp  crypto.hpp  iauth.hpp
src-cpp/model/auth/simple/: auth.cpp  auth.hpp
src-cpp/model/connect/grpc/: connect.cpp  connect.hpp
src-cpp/model/connect/sqlite/: connect.cpp  connect.hpp  token.cpp  token.hpp
src-cpp/model/dao/: capi.cpp  capi.h  connect.cpp  connect.h  dirutils.cpp  dirutils.hpp  ffconnect.h  ffqueue.h  ffqueuelist.h  grpcconnect.cpp  grpcconnect.hpp  grpcqueue.cpp  grpcqueue.hpp  grpcqueuelist.cpp  grpcqueuelist.hpp  grpcutils.cpp  grpcutils.hpp  handlemanager.cpp  handlemanager.hpp  iconnect.cpp  iconnect.hpp  iqueue.hpp  iqueuelist.hpp  queue.cpp  queue.h  queuelist.cpp  queuelist.h  sqliteconnect.cpp  sqliteconnect.hpp  sqlitequeue.cpp  sqlitequeue.hpp  sqlitequeuelist.cpp  sqlitequeuelist.hpp
src-cpp/model/dao/grpc/: connect.cpp  connect.hpp  queue.cpp  queue.hpp  queuelist.cpp  queuelist.hpp  utils.cpp  utils.hpp
src-cpp/model/dao/sqlite/: connect.cpp  connect.hpp  queue.cpp  queue.hpp  queuelist.cpp  queuelist.hpp
src-cpp/model/proc/: iproc.cpp  iproc.hpp  linuxproc.cpp  linuxproc.hpp  macproc.cpp  macproc.hpp  posixproc.cpp  posixproc.hpp  task.cpp  task.hpp  winproc.cpp  winproc.hpp
src-cpp/model/test/: grpcmodel_ut.cpp  param.cpp  param.hpp  testproc.cpp
src-cpp/protos/: access.proto  queue.proto  queuelist.proto  types.proto
src-cpp/view/: about.ui  mainwindow.ui  output.ui  settings.ui
(+120 files in other folders)
